--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
     .control-panel .info-section {
       display: flex;
-      align-items: center;
-      gap: 30px;
+      align-items: flex-start;
       flex: 1;
+      padding-left: 20px;
     }
 
     .control-panel .controls-section {
@@ -57,6 +57,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      gap: 5px;
     }
 
     .control-panel .info-label {
@@ -75,7 +76,7 @@
     }
 
     .control-panel .clock {
-      font-size: 18px;
+      font-size: 22px;
       color: #f39c12;
       font-weight: bold;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
@@ -86,9 +87,16 @@
     }
 
     .control-panel .route-info {
-      color: #e74c3c;
-      font-size: 18px;
+      font-size: 20px;
       font-weight: bold;
+    }
+
+    .control-panel .route-prefix {
+      color: #ecf0f1;
+    }
+
+    .control-panel .route-destination {
+      color: #3498db;
     }
 
     .control-panel .speed-button {
@@ -139,6 +147,9 @@
 
     /* Кнопка-бургер */
     .burger-button {
+      position: absolute;
+      top: 15px;
+      right: 15px;
       background: linear-gradient(135deg, #3498db, #2980b9);
       border: none;
       color: white;
@@ -153,7 +164,7 @@
       align-items: center;
       width: 50px;
       height: 50px;
-      margin-right: 15px;
+      z-index: 1001;
     }
 
     .burger-button:hover {
@@ -186,6 +197,48 @@
 
     .burger-button.active .burger-line:nth-child(3) {
       transform: rotate(-45deg) translate(7px, -6px);
+    }
+
+    /* Кнопка скорости в стиле бургера */
+    .speed-button-new {
+      position: absolute;
+      top: 15px;
+      right: 80px;
+      background: linear-gradient(135deg, #7f8c8d, #95a5a6);
+      border: none;
+      color: white;
+      padding: 12px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      height: 50px;
+      z-index: 1001;
+      font-size: 18px;
+      font-weight: bold;
+    }
+
+    .speed-button-new:hover {
+      background: linear-gradient(135deg, #95a5a6, #7f8c8d);
+      transform: translateY(-2px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+    }
+
+    .speed-button-new:active {
+      transform: translateY(0);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    }
+
+    .speed-button-new.boosted {
+      background: linear-gradient(135deg, #f39c12, #e67e22);
+    }
+
+    .speed-button-new.boosted:hover {
+      background: linear-gradient(135deg, #e67e22, #d35400);
     }
 
     /* Модальное окно */
@@ -364,25 +417,23 @@
       }
 
       .control-panel .clock {
-        font-size: 16px;
+        font-size: 20px;
       }
 
       .control-panel .route-info {
-        font-size: 16px;
+        font-size: 18px;
       }
     }
 
     @media (max-width: 1000px) {
       .control-panel {
         height: 100px;
-        flex-direction: column;
         padding: 10px;
       }
 
       .control-panel .info-section {
-        gap: 15px;
-        flex-wrap: wrap;
-        justify-content: center;
+        padding-left: 10px;
+        justify-content: flex-start;
       }
 
       .control-panel .controls-section {
@@ -411,16 +462,20 @@
         padding: 5px;
       }
 
+      .control-panel .info-section {
+        padding-left: 5px;
+      }
+
       .control-panel .info-value {
         font-size: 14px;
       }
 
       .control-panel .clock {
-        font-size: 14px;
+        font-size: 18px;
       }
 
       .control-panel .route-info {
-        font-size: 14px;
+        font-size: 16px;
       }
 
       .control-panel .speed-button {
@@ -438,17 +493,27 @@
     <div class="info-section">
       <div class="info-item">
         <div class="info-value clock" id="game-datetime">Вс 07 Сен - 08:00</div>
-      </div>
-      <div class="info-item">
-        <div class="info-value route-info" id="route-info">В пути в: Институт</div>
+        <div class="info-value route-info" id="route-info">
+          <span class="route-prefix">В пути в:</span>
+          <span class="route-destination">Институт</span>
+        </div>
       </div>
     </div>
     <div class="controls-section">
-      <button class="speed-button" id="speed-button">Скорость x1</button>
       <button class="speed-button" id="zoom-button" style="display: none;">Полный экран</button>
       <button class="speed-button" id="zoom-in-button" style="display: none;">🔍+</button>
       <button class="speed-button" id="zoom-out-button" style="display: none;">🔍-</button>
     </div>
+
+    <!-- Кнопка скорости с фиксированной позицией -->
+    <button class="speed-button-new" id="speed-button">x5</button>
+
+    <!-- Кнопка-бургер с фиксированной позицией -->
+    <button class="burger-button" id="burger-button">
+      <div class="burger-line"></div>
+      <div class="burger-line"></div>
+      <div class="burger-line"></div>
+    </button>
   </div>
 
   <!-- Игровая область -->
@@ -465,7 +530,6 @@
       </div>
       <div class="menu-items">
         <div class="menu-item" id="menu-speed">⚡ Управление скоростью</div>
-        <div class="menu-item" id="menu-zoom">🔍 Масштабирование</div>
         <div class="menu-item" id="menu-route">🗺️ Маршрут</div>
         <div class="menu-item" id="menu-settings">⚙️ Настройки</div>
         <div class="menu-item" id="menu-help">❓ Помощь</div>
@@ -560,8 +624,27 @@
     };
 
     // УПРАВЛЕНИЕ СКОРОСТЬЮ
-    let SPEED_MULTIPLIER = 5; // множитель скорости (1 = нормальная, 5 = ускоренная)
-    let isSpeedBoosted = true; // включено ли ускорение по умолчанию
+    let SPEED_MULTIPLIER = 1; // множитель скорости (1 = нормальная, 5 = ускоренная)
+    let isSpeedBoosted = false; // включено ли ускорение по умолчанию
+
+    // Функции для работы с localStorage
+    function saveSpeedSettings () {
+      localStorage.setItem('shina-game-speed-boosted', isSpeedBoosted.toString());
+      localStorage.setItem('shina-game-speed-multiplier', SPEED_MULTIPLIER.toString());
+    }
+
+    function loadSpeedSettings () {
+      const savedBoosted = localStorage.getItem('shina-game-speed-boosted');
+      const savedMultiplier = localStorage.getItem('shina-game-speed-multiplier');
+
+      if (savedBoosted !== null) {
+        isSpeedBoosted = savedBoosted === 'true';
+      }
+
+      if (savedMultiplier !== null) {
+        SPEED_MULTIPLIER = parseInt(savedMultiplier);
+      }
+    }
 
     // Дебаг-функция для логирования
     function debugLog (message, data = null) {
@@ -722,6 +805,9 @@
     // Определяем мобильное устройство в начале
     const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
 
+    // Загружаем сохраненные настройки скорости
+    loadSpeedSettings();
+
     setupApp();
 
     // Создаем panningController раньше, чтобы он был доступен в setupWorld
@@ -817,8 +903,11 @@
         isSpeedBoosted = !isSpeedBoosted;
         SPEED_MULTIPLIER = isSpeedBoosted ? 5 : 1;
 
+        // Сохраняем настройки в localStorage
+        saveSpeedSettings();
+
         // Обновляем внешний вид кнопки
-        speedButton.textContent = isSpeedBoosted ? 'Скорость x5' : 'Скорость x1';
+        speedButton.textContent = isSpeedBoosted ? 'x5' : 'x1';
         speedButton.classList.toggle('boosted', isSpeedBoosted);
 
         // Логируем изменение
@@ -829,7 +918,7 @@
       });
 
       // Инициализируем кнопку
-      speedButton.textContent = isSpeedBoosted ? 'Скорость x5' : 'Скорость x1';
+      speedButton.textContent = isSpeedBoosted ? 'x5' : 'x1';
       speedButton.classList.toggle('boosted', isSpeedBoosted);
 
       // Настраиваем кнопку масштабирования
@@ -891,13 +980,10 @@
         }
       });
 
-      // Показываем кнопки масштабирования на мобильных устройствах
-      if (isMobile) {
-        zoomButton.style.display = 'block';
-        zoomInButton.style.display = 'block';
-        zoomOutButton.style.display = 'block';
-        updateZoomButton();
-      }
+      // На мобильных устройствах кнопки масштабирования скрыты
+
+      // Инициализируем меню-бургер
+      initMenu();
 
       // Инициализируем дисплеи
       updateRouteDisplay();
@@ -965,14 +1051,6 @@
               speedButton.click();
               showMenuNotification('⚡ Скорость переключена');
               break;
-            case 'menu-zoom':
-              // Переключаем масштаб
-              if (typeof panningController !== 'undefined' && panningController) {
-                panningController.toggleZoom();
-                updateZoomButton();
-                showMenuNotification('🔍 Масштаб изменен');
-              }
-              break;
             case 'menu-route':
               showMenuNotification('🗺️ Информация о маршруте', 'Текущий маршрут: ' + ROUTE_SCHEDULE[currentRouteIndex].name);
               break;
@@ -1031,11 +1109,15 @@
     function updateRouteDisplay () {
       if (!routeDisplay) return; // защита от вызова до инициализации
       const currentDest = ROUTE_SCHEDULE[currentRouteIndex];
+      const prefixSpan = routeDisplay.querySelector('.route-prefix');
+      const destinationSpan = routeDisplay.querySelector('.route-destination');
 
       if (isAtDestination) {
-        routeDisplay.textContent = `В пункте: ${currentDest.name}`;
+        prefixSpan.textContent = 'В пункте:';
+        destinationSpan.textContent = currentDest.name;
       } else {
-        routeDisplay.textContent = `В пути в: ${currentDest.name}`;
+        prefixSpan.textContent = 'В пути в:';
+        destinationSpan.textContent = currentDest.name;
       }
     }
 
@@ -2303,10 +2385,6 @@
       console.log('📱 Кнопка "Полный экран" - переключение полноэкранного режима');
       console.log('📍 Касание перекрестка - показать координаты');
 
-      // Показываем уведомление о мобильных жестах
-      setTimeout(() => {
-        showSpeedNotification('📱 Мобильные жесты: касание - панорамирование, два пальца - зум+панорамирование');
-      }, 2000);
     }
   </script>
 </body>
